--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,10 +1,10 @@
 # This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
+# File in the packages/ subdirectory configure your dependencies.
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-
+    files_directory: '%kernel.project_dir%/uploads'
 services:
     # default configuration for services in *this* file
     _defaults:
